--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^1.19.1",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "_id": "vue-github-page@0.1.0",
+  "readme": "ERROR: No README data found!"
 }
